# cooking-chatbot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: add-tool.md  lint.md  start-dev.md  test-backend.md  test-e2e.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  openapi.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/graphs/: cooking.py
backend/app/prompts/: system.py
backend/app/schemas/: chat.py
backend/app/tools/: __init__.py  cookware.py  search.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_api.py  test_tools.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/chat/: chat-container.tsx  chat-input.tsx  chat-message.tsx  suggested-prompts.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: use-chat.ts
frontend/src/lib/: api.ts
