[project]
name = "cooking-chatbot-backend"
version = "0.1.0"
description = "LLM-powered cooking & recipe Q&A backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.2",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "langchain-community>=0.3",
    "tavily-python>=0.5",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "ddgs>=9.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
